fix: resolve responsive problem on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,11 @@
 body {
   background: var(--background)
 }
+
+.ltr {
+  direction: ltr;
+}
+
+.rtl {
+  direction: rtl;
+}
